# libs/uuringlane/Cargo.toml
[package]
name = "uuringlane"
version = "0.1.0"
authors = ["ha-desu"]
edition = "2021"
description = "UuRingLane: A fast in-memory indexing library"
license = "MIT"
repository = "https://github.com/ha-desu/uuringlane_rs"
readme = "README.md"
keywords = ["uuid", "index", "in-memory", "sns", "timeline"]
categories = ["data-structures", "database-implementations"]

[dependencies]
uuid = { version = "1.10", features = ["v7", "serde"] }
dashmap = "6.0"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
sysinfo = "0.30"
thiserror = "1.0"
once_cell = "1.19"